UPDATE ::: Fixing null dereferencing issues
git-svn-id: svn://107.170.10.188:8080/Semoss/dev@38501 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: 487b7944c46c524a82c70a648cb355f87d3c5877